<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.paulkunze.piui.SettingsActivity"
    tools:showIn="@layout/activity_settings">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">
                <TableRow>
                    <TextView
                        android:text="@string/server"/>
                    <EditText
                        android:id="@+id/host"
                        android:text=""
                        android:inputType="textUri"/>

                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/port"/>
                    <EditText
                        android:id="@+id/port"
                        android:text=""
                        android:inputType="number"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/client"/>
                    <EditText
                        android:id="@+id/client"
                        android:text=""
                        android:inputType="text"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/topicOut"/>
                    <EditText
                        android:id="@+id/topic_in"
                        android:text=""
                        android:inputType="textCapCharacters"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/topicIn"/>
                    <EditText
                        android:id="@+id/topic_out"
                        android:text=""
                        android:inputType="textCapCharacters"/>
                </TableRow>
            </TableLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:onClick="saveSettings"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_save_script"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:onClick="saveScript"/>

        </LinearLayout>

</ScrollView>
